CCLE-7504 css: Visibility re-fix for add-question drop-down

--- a/theme/uclashared/scss/header.scss
+++ b/theme/uclashared/scss/header.scss
@@ -310,7 +310,7 @@ header {
     border-top: 4px solid white;
 }
 
-a.dropdown-toggle, a.dropdown-toggle:hover {
+.usermenu a.dropdown-toggle, .usermenu a.dropdown-toggle:hover {
     color: #f5f8f9;
 }
 
